@@ -47,7 +47,8 @@ class ux_tx_em_Install extends tx_em_Install {
 	 */
 	public function checkDBupdates($extKey, array $extInfo, $infoOnly = FALSE) {
 		$output = '';
-		if ($infoOnly || !isset($extInfo['EM_CONF']['constraints']['depends']['xliff'])) {
+		$depends = isset($extInfo['EM_CONF']['constraints']['depends']['xliff']);
+		if ($infoOnly || !t3lib_extMgm::isLoaded($extKey) || !$depends) {
 			return parent::checkDBupdates($extKey, $extInfo, $infoOnly);
 		}
 
